<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/FLogin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3E60A5"
    tools:context=".Login">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/SubFLogin"
        android:layout_width="369dp"
        android:layout_height="548dp"
        android:background="#FBF5E0"
        android:clickable="false"
        android:clipChildren="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.497">

        <EditText
            android:id="@+id/loginEmail"
            android:layout_width="284dp"
            android:layout_height="60dp"
            android:ems="10"
            android:hint="@string/cpf"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.327" />

        <EditText
            android:id="@+id/loginSenha"
            android:layout_width="284dp"
            android:layout_height="60dp"
            android:ems="10"
            android:hint="@string/senha"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textColorHint="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/black"
            android:text="@string/entrar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.646" />

        <TextView
            android:id="@+id/titleLogin"
            android:layout_width="0dp"
            android:layout_height="41dp"
            android:importantForAutofill="no"
            android:text="@string/bem_vindo"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.104" />

        <Button
            android:id="@+id/CriarConta"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/green"
            android:importantForAutofill="no"
            android:text="@string/criarConta"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.793" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:text="@string/senhaE"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.935"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.969" />

        <Button
            android:id="@+id/btnVoltarLogin"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:backgroundTint="#F44336"
            android:text="@string/voltar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.056"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.968" />

        <TextView
            android:id="@+id/SaidaErroLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.232" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>