<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context=".TelaInicial">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/SubFrInicio"
        android:layout_width="409dp"
        android:layout_height="638dp"
        android:background="@color/fundo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <EditText
            android:id="@+id/etNomeClienteInicio"
            android:layout_width="284dp"
            android:layout_height="60dp"
            android:backgroundTint="@color/black"
            android:ems="10"
            android:hint="@string/nome"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textColorHint="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.584"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.057" />

        <EditText
            android:id="@+id/etEmailClienteInicio"
            android:layout_width="284dp"
            android:layout_height="60dp"
            android:backgroundTint="@color/black"
            android:ems="10"
            android:hint="@string/email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.584"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.181" />

        <EditText
            android:id="@+id/etSenha1Inicio"
            android:layout_width="284dp"
            android:layout_height="60dp"
            android:backgroundTint="@color/black"
            android:ems="10"
            android:hint="@string/senha"
            android:importantForAutofill="no"
            android:inputType="numberPassword"
            android:textColorHint="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.584"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.309" />

        <EditText
            android:id="@+id/etSenha2Inicio"
            android:layout_width="284dp"
            android:layout_height="60dp"
            android:backgroundTint="@color/black"
            android:ems="10"
            android:hint="@string/senhaN"
            android:importantForAutofill="no"
            android:inputType="numberPassword"
            android:textColorHint="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.584"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.432" />

        <TextView
            android:id="@+id/TvFrete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.575" />

        <TextView
            android:id="@+id/tvStreaming"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.634" />

        <Button
            android:id="@+id/btnEncerraConta"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:backgroundTint="#E91E63"
            android:text="@string/encerrarConta"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.061"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.972" />

        <Button
            android:id="@+id/btnAtualizar"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:backgroundTint="@color/green"
            android:text="@string/atualizar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.061"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.757" />

        <Button
            android:id="@+id/btnAssinatura"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:text="@string/plano"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.888"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.757" />

        <TextView
            android:id="@+id/tvErroInicio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#F44336"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.52" />

        <Button
            android:id="@+id/btnCancelarAssinatura"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:backgroundTint="#2196F3"
            android:text="@string/Cancelar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.061"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.861" />

        <Button
            android:id="@+id/btnGerenciar"
            android:layout_width="149dp"
            android:layout_height="58dp"
            android:text="@string/gerenciar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.884"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.758" />

        <Button
            android:id="@+id/btnSair"
            android:layout_width="64dp"
            android:layout_height="61dp"
            android:backgroundTint="#FA0000"
            app:icon="@android:drawable/ic_lock_power_off"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.988"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

